--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.5.2</version> <!-- Corregido: Actualización a la versión correcta de Spring Boot -->
+		<version>2.5.3</version> <!-- Actualizada a la versión más reciente de Spring Boot -->
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
@@ -22,24 +22,24 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
+		 <dependency>
+		 	<groupId>org.springframework.boot</groupId>
+		 	<artifactId>spring-boot-starter-test</artifactId>
+		 	<scope>test</scope>
+		 </dependency>
 
-		<!-- Pg -->
-		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<version>42.5.4</version>
-		</dependency>
+		 <!-- Pg -->
+		 <dependency>
+		 	<groupId>org.postgresql</groupId>
+		 	<artifactId>postgresql</artifactId>
+		 	<version>42.3.1</version> <!-- Actualizada a la versión compatible -->
+		 </dependency>
 		
-		<!-- Spring Data JPA -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>
+		 <!-- Spring Data JPA -->
+		 <dependency>
+		 	<groupId>org.springframework.boot</groupId>
+		 	<artifactId>spring-boot-starter-data-jpa</artifactId>
+		 </dependency>
 	</dependencies>
 
 	<build>
@@ -48,6 +48,7 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			
 		</plugins>
 	</build>
 </project>
